# MainHub

./: .gitignore  README.md
firmware/: .gitignore  CMakeLists.txt  Kconfig  README.md  portenta.jdebug  prj.conf  west.yml
firmware/.devcontainer/: Dockerfile  devcontainer.json  west.yml
firmware/boards/arm/manikin_mainboard_portenta/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  Kconfig.manikin_mainboard_portenta  board.c  board.cmake  board.yml  manikin_mainboard_portenta-common.dtsi  manikin_mainboard_portenta.dts  manikin_mainboard_portenta_m7.ld  manikin_mainboard_portenta_stm32h747xx_m4.dts  manikin_mainboard_portenta_stm32h747xx_m4.yaml  manikin_mainboard_portenta_stm32h747xx_m7.dts  manikin_mainboard_portenta_stm32h747xx_m7.overlay  soc.h  stm32h7xx_hal_conf.h  (+3 more)
firmware/launch_config/: launch.json  openocd_stm32h747i.cfg
firmware/m4_subimage/: .gitignore  m4_debug.jdebug
firmware/m4_subimage/src/: main.c
firmware/overlay/manikin_mainboard_portenta/: gpio.overlay
firmware/src/: basic_implementation.c  ble_notifications.h  main.c  notification_manager.c  rtc_init.c
firmware/src/ble/: ble_can_interface.h  ble_handlers.c  ble_handlers.h  ble_protocol.c  ble_protocol.h  button_svc.c  led_svc.c  led_svc.h
firmware/src/can/: can_addr_decl.h  can_rx_types.h  can_transport.c  can_transport.h
firmware/src/message_processor/: CMakeLists.txt  message_processor.c  message_processor.h  message_processor_simple.c
firmware/src/sdcard/: sdcard_module.c  sdcard_module.h
firmware/src/session/: led_handler.c  led_handler.h  session.c  session.h
(+11 files in other folders)
